# ros2_advanced_navigation

./: README.md
custom_nav2_controller_plugin/: package.xml  regulated_pure_pursuit_controller_info.xml
custom_nav2_controller_plugin/include/custom_nav2_controller_plugin/: regulated_pure_pursuit_controller.hpp
custom_nav2_controller_plugin/src/: regulated_pure_pursuit_controller.cpp
custom_nav2_costmap_plugin/: CMakeLists.txt  my_custom_costmap_plugininfo.xml  package.xml
custom_nav2_costmap_plugin/include/custom_nav2_costmap_plugin/: my_custom_costmap.hpp
custom_nav2_costmap_plugin/src/: my_custom_costmap.cpp
custom_nav2_planner_plugin/: CMakeLists.txt  package.xml  wavy_line_plugin_info.xml
custom_nav2_planner_plugin/include/custom_nav2_planner_plugin/: wavy_line_planner.hpp
custom_nav2_planner_plugin/src/: wavy_line_planner.cpp
nav2_new_features/: setup.py
nav2_new_features/install/: local_setup.sh  setup.sh
nav2_new_features/install/nav2_new_features/share/nav2_new_features/: package.bash  package.ps1  package.sh  package.xml  package.zsh
nav2_new_features/log/: latest_build
nav2_new_features/scripts/: follow_waypoints.py  navigate_through_poses.py  navigate_to_pose.py
nav2_pkgs/localization_server/: setup.py
nav2_pkgs/map_server/config/: map_keepout.yaml
nav2_pkgs/path_planner_server/: setup.py
nav2_pkgs/path_planner_server/config/: controller.yaml  filters.yaml  planner_server.yaml  waypoint_follower.yaml
nav2_pkgs/path_planner_server/launch/: navigation.launch.py
